if-finance/css/style.css
html, body{
	margin: 0;
	padding: 0;
	background: #141414;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
	color: #FFF;
}

body > header{
	height: 70px;
	background: #000;
	padding: 0 16px;
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.logotipo{
	display: flex;
	align-items: center;
}

.logotipo img{
	width: 60px;
	height: 60px;
}

.logotipo h1 span{
	color: #ff5900;
}

nav ul{
	display: flex;
  list-style-type: none;
  gap: 16px;
	margin: 0;
	padding: 0;
}

body > main{
	min-height: calc(100vh - 302px);
	padding: 16px;
	display: inline-block;
	gap: 16px;
}

body > footer{
	background: #000;
	height: 200px;
	display: flex;
	justify-content: center;
	align-items: center;
}

.card-ticker{
	width: 230px;
	background: #0a0a0a;
	border-radius: 20px;
	padding: 16px;
}

.card-ticker header{
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.card-ticker header h2{
	margin: 0;
	font-size: 12px;
}

.card-ticker header h2 span{
	font-weight: normal;
	color: #7b7b7b;
}

.card-ticker header h1{
	margin: 0;
	font-size: 14px;
	font-weight: 500;
} 

.card-ticker main p{
	font-size: 32px;
	margin: 16px 0 2px 0;
} 

.card-ticker main span{
	color: #7b7b7b;
}

.card-ticker main span:nth-child(2){
	background: #02bb2a;
	padding: 3px 16px;
	margin: 0 8px 0 0;
	border-radius: 12px;
	font-size: 14px;
	color: #FFF;
}

.card-ticker footer{
	display: flex;
	justify-content: space-between;
	margin: 26px 0 0 0;
}

.card-ticker footer div:nth-child(2){
	text-align: right;
}

.card-ticker footer div p{
	margin: 0;
	font-size: 18px;
}

.card-ticker footer div span{
	font-size: 14px;
	color: #7b7b7b;
}

